--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '24.0.0 rc2'
+    compileSdkVersion 21
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "com.example.qaiser.test"
         minSdkVersion 14
